--- a/BaseSetup/package.json
+++ b/BaseSetup/package.json
@@ -13,9 +13,11 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.2",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
     "nuxt": "^3.7.4",
+    "nuxt-icon": "^0.5.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
